@@ -7,6 +7,7 @@ OpenLDAP 2.3.14 Engineering
 	Fixed slapd-bdb/hdb mode argument parsing (ITS#4257)
 	Fixed slapd-bdb/hdb cn=config reindexing (ITS#4260)
 	Fixed slapd-bdb/hdb cn=config olcDbIndex modify/replace (ITS#4262)
+	Fixed slapd-bdb/hdb lockup issue (ITS#4184)
 	Fixed slapo-rwm static DN free bug (ITS#4248)
 
 OpenLDAP 2.3.13 Release
